@@ -1,4 +1,4 @@
-.TH "icmake" "1" "1992\-2016" "icmake\&.9\&.02\&.00\&.tar\&.gz" "A program maintenance utility"
+.TH "icmake" "1" "1992\-2016" "icmake\&.9\&.02\&.01\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
 .SH "NAME"
