@@ -1,4 +1,4 @@
-.TH "icmbuild" "1" "1992\-2016" "icmake\&.9\&.02\&.00\&.tar\&.gz" "Icmake\(cq\&s generic program maintenance facility"
+.TH "icmbuild" "1" "1992\-2016" "icmake\&.9\&.02\&.01\&.tar\&.gz" "Icmake\(cq\&s generic program maintenance facility"
 
 .PP 
 .SH "NAME"
