@@ -1,4 +1,4 @@
-.TH "icmconf" "7" "1992\-2016" "icmake\&.9\&.02\&.00\&.tar\&.gz" "configuration file for \fBicmbuild\fP(1)"
+.TH "icmconf" "7" "1992\-2016" "icmake\&.9\&.02\&.01\&.tar\&.gz" "configuration file for \fBicmbuild\fP(1)"
 
 .PP 
 .SH "NAME"
