@@ -1,4 +1,4 @@
-.TH "icmstart" "1" "1992\-2016" "icmake\&.9\&.02\&.00\&.tar\&.gz" "starts icmbuild program maintenance"
+.TH "icmstart" "1" "1992\-2016" "icmake\&.9\&.02\&.01\&.tar\&.gz" "starts icmbuild program maintenance"
 
 .PP 
 .SH "NAME"
