@@ -1,4 +1,4 @@
-.TH "icmstart\&.rc" "7" "1992\-2016" "icmake\&.9\&.02\&.00\&.tar\&.gz" "icmstart resource file"
+.TH "icmstart\&.rc" "7" "1992\-2016" "icmake\&.9\&.02\&.01\&.tar\&.gz" "icmstart resource file"
 
 .PP 
 .SH "NAME"
@@ -20,6 +20,7 @@ the construction of a \fBC++\fP program using \fBicmbuild\fP(1):
 .nf 
 
     CLASSES
+    icmconf
     P main\&.cc 
     P main\&.ih 
     P usage\&.cc
